// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foo1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
// @providesModule foo

export function foo(): number { return 0; }

=====================================output=====================================
// @flow
// @providesModule foo

export function foo(): number {
  return 0;
}

================================================================================
`;

exports[`foo2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
// @providesModule foo

export function foo(): string { return ''; }

=====================================output=====================================
// @flow
// @providesModule foo

export function foo(): string {
  return "";
}

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import {foo} from 'foo';

(foo(): empty);

=====================================output=====================================
// @flow

import { foo } from "foo";

(foo(): empty);

================================================================================
`;
